UML-2918 inform users that LPAs registered before jan 2019 with i and p may have a severance (#2278)
* warning content added

* add Welsh translations

* added viewer-side content

* changed flag in terraform

* removed feature flag

* remove feature flag

* removed feature flag

* Capitalise words

* feature flag

* re-add welsh text after merging in main which had conflicts in
translation files

---------

Co-authored-by: Nick Davis <nicholas.davis@digital.justice.gov.uk>
Co-authored-by: Nick Davis <62664046+nickdavis2001@users.noreply.github.com>

--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -115,6 +115,20 @@
                     <h2 class="govuk-heading-l">
                         {% trans %}<abbr title="lasting power of attorney">LPA</abbr> details{% endtrans %}
                     </h2>
+                    {% if feature_enabled("instructions_and_preferences") %}
+                        {% if (lpa.applicationHasGuidance or lpa.applicationHasRestrictions) and (lpa.registrationDate < date('2019-01-01')) %}
+                            <div class="govuk-warning-text">
+                                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                                <strong class="govuk-warning-text__text">
+                                    <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                                    {% trans %}
+                                        Some words in these instructions or preferences may have been removed by the Court of Protection. If you need to check this, please see the paper
+                                        <abbr title="lasting power of attorney">LPA</abbr>.
+                                    {% endtrans %}
+                                </strong>
+                            </div>
+                        {% endif %}
+                    {% endif %}
                     <dl class="govuk-summary-list govuk-summary-list--no-border">
                         {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
                     </dl>
