--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
@@ -105,9 +105,32 @@
     </div>
 {% if feature_enabled("instructions_and_preferences") and iap_images is defined %}
 </dl>
-    {# if in error show error TODO }
+    {% if (iap_images.getImagesStatus().value) == 'COLLECTION_ERROR' %}
+        <div class="govuk-warning-text">
+         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+           {% trans %}
+           We cannot show the preferences for this LPA. Until we can fix this problem, you’ll need to show the paper <abbr
+           title="lasting power of attorney">LPA</abbr> TODO different text for actor and viewer.
+           {% endtrans %}
+           </strong>
+           </div>
+    {% endif %}
     {#   if in progress show spinner/wait message TODO #}
-     {# if complete iterate images #}
+ {% if (iap_images.getImagesStatus().value) == 'COLLECTION_IN_PROGRESS' %}
+     <div class="govuk-warning-text">
+         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+         <strong class="govuk-warning-text__text">
+             <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+             {% trans %}
+                 A scanned image of the donor’s preferences will appear here soon
+                 The first time may take up to 10 minutes.
+                 You do not need to stay on the page or refresh it whilst you wait,
+             {% endtrans %}
+         </strong>
+     </div>
+ {% endif %}
  {% if (iap_images.getImagesStatus().value) == 'COLLECTION_COMPLETE' %}
     <div id="preferences_images" class="opg-ip">
         {% for url in iap_images.getPreferencesImageUrls %}
@@ -136,8 +159,32 @@
     </div>
 {% if feature_enabled("instructions_and_preferences") and iap_images is defined %}
 </dl>
-{# if in error show error TODO }
+    {% if (iap_images.getImagesStatus().value) == 'COLLECTION_ERROR' %}
+        <div class="govuk-warning-text">
+         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+           {% trans %}
+           We cannot show the instructions for this LPA. Until we can fix this problem, you’ll need to show the paper <abbr
+           title="lasting power of attorney">LPA</abbr> TODO different text for actor and viewer.
+           {% endtrans %}
+           </strong>
+           </div>
+    {% endif %}
     {#   if in progress show spinner/wait message TODO #}
+ {% if (iap_images.getImagesStatus().value) == 'COLLECTION_IN_PROGRESS' %}
+     <div class="govuk-warning-text">
+         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+         <strong class="govuk-warning-text__text">
+             <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+             {% trans %}
+                 A scanned image of the donor’s instructions will appear here soon
+                 The first time may take up to 10 minutes.
+                 You do not need to stay on the page or refresh it whilst you wait,
+             {% endtrans %}
+         </strong>
+     </div>
+ {% endif %}
      {# if complete iterate images #}
     {% if (iap_images.getImagesStatus().value) == 'COLLECTION_COMPLETE' %}
         <div id="instructions_images" class="opg-ip">
