add different text for actor vs viewer side in lpa-details twig file

--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -116,7 +116,7 @@
                         {% trans %}<abbr title="lasting power of attorney">LPA</abbr> details{% endtrans %}
                     </h2>
 
-                    {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
+                    {% include '@partials/lpa-summary-details/lpa-details.html.twig' with { 'side': 'ACTOR' } %}
 
                     {% if feature_enabled("instructions_and_preferences") and iap_images is defined %}
                         <div class="govuk-inset-text">
